add unit testing for TaskService, improve GlobalExceptionHandler